[package]
name = "lumen-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Test suite for Lumen rollkit integration"
publish = false

[dependencies]
# Lumen dependencies
lumen-rollkit = { path = "../rollkit" }
lumen-node = { path = "../node" }
lumen-common = { path = "../common" }

# Reth dependencies
reth-testing-utils.workspace = true
reth-db.workspace = true
reth-evm-ethereum.workspace = true
reth-transaction-pool.workspace = true
reth-consensus.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-node-api.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-engine-local.workspace = true
reth-revm.workspace = true
reth-node-types.workspace = true
reth-payload-builder-primitives.workspace = true
reth-execution-types.workspace = true
reth-evm.workspace = true
reth-errors.workspace = true
reth-engine-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-chainspec.workspace = true

# Alloy dependencies
alloy-genesis.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true

# Core dependencies
tempfile.workspace = true
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
eyre.workspace = true
tracing.workspace = true

[lints]
workspace = true