[package]
description = "Test suite for Lumen rollkit integration"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lumen-tests"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Lumen dependencies
lumen-common = {path = "../common"}
lumen-node = {path = "../node"}
lumen-rollkit = {path = "../rollkit"}

# Reth dependencies
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-db.workspace = true
reth-engine-local.workspace = true
reth-engine-primitives.workspace = true
reth-errors.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-node-api.workspace = true
reth-node-types.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-primitives.workspace = true
reth-provider = {workspace = true, features = ["test-utils"]}
reth-revm.workspace = true
reth-tasks.workspace = true
reth-testing-utils.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types.workspace = true

# Core dependencies
async-trait.workspace = true
chrono = {version = "0.4", features = ["serde"]}
eyre.workspace = true
futures.workspace = true
hex = "0.4"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tempfile.workspace = true
tokio = {workspace = true, features = ["full"]}
tracing.workspace = true

[lints]
workspace = true
